test/invalid-semantics/fc51601-t1/t1.mag
--- Author: fc51601, José Sousa

const num : Int = 1

fun t (t) : Int -> Unit =
    var t1 : Int = t;
    var i : Int = 0;
    if t != 1 then
        while t > 1 do (
            t1 = t1 - 1;
            i = i + 1
        )
    else
        100

fun main (_) : Unit -> Unit = print(t(100))
